--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 Flask==3.0.3
 requests
 gunicorn==23.0.0
-flask-cors
-numpy
+flask-cors~=5.0.0
+numpy~=2.1.1
+pandas~=2.2.2
+matplotlib~=3.9.2
+seaborn~=0.13.2
+scikit-learn~=1.5.1
